updates to games and profile page

--- a/SoloProj/games.html
+++ b/SoloProj/games.html
@@ -59,9 +59,9 @@
     <div id="recommended"></div>
     
     <p class="lead">
-      <a  href="#" class="btn btn-lg btn-secondary" onclick="getRec()">Generate</a>
+      <a  href="#" class="btn btn-lg btn-secondary" onclick="getRec()">All games</a>
     </p>
   </main>
-        <script src = "./recommendations.js"></script>
+        <script src = "./games.js"></script>
     </body>
 </html>
