--- a/SoloProj/profile.html
+++ b/SoloProj/profile.html
@@ -66,7 +66,7 @@
 
       <div class="card" style="width: 60rem;">  
           <div id="tophover"></div>
-              <form onsubmit="">
+              <form onsubmit="saveProf()">
                   <div>
 
                     
