updates to index, login and profile
Basic functionality complete

--- a/SoloProj/profile.html
+++ b/SoloProj/profile.html
@@ -41,6 +41,9 @@
                       #spacer{
                         height: 25px;
                       }
+                      #main{
+                        place-self: center;
+                      }
     </style>
     </head>
     <body>
@@ -60,7 +63,7 @@
     </div>
   </header>     
    
- <center><main  role="main" id="main" >
+ <main  role="main" id="main" >
 
     
 
@@ -195,7 +198,7 @@
    
       <div id=bottomhover></div>
     
-  </main></center>
+  </main>
         <script src = "./profile.js"></script>
     </body>
 </html>
